# Bendis

./: .gitignore  BUILD.md  CARGO_MANAGEMENT.md  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETTINGS.md  USAGE.md  settings.sh
.github/workflows/: sync.yml
bendis/: .gitignore  Cargo.toml  LICENSE  README.md
bendis/.bendis/: Bender.yml
bendis/src/: main.rs
bendis/src/commands/: config.rs  init.rs  mod.rs  passthrough.rs  update.rs
bendis/src/converter/: format.rs
bendis/src/utils/: config.rs  mod.rs  version_checker.rs  welcome.rs
scripts/: format_converter.py
