[package]
name = "bendis"
version = "0.2.3"
edition = "2021"
authors = ["Heris Team"]
description = "A patch tool for Bender to work better in HERIS project"
license = "MIT"
repository = "https://github.com/albertc9/Bendis"
homepage = "https://github.com/albertc9/Bendis"
documentation = "https://github.com/albertc9/Bendis"
readme = "README.md"
keywords = ["hardware", "bender", "dependencies", "eda", "verilog"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "bendis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
colored = "2.1"
regex = "1.10"
sha2 = "0.10"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
